--- a/UID_test.ipynb
+++ b/UID_test.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "admin-rramirez 70000\n"
+      "nfsnobody 65534\n"
      ]
     }
    ],
    "source": [
     "# get highest UID from /etc/passwd\n",
-    "with open(r'C:\\Users\\RRamirez\\Desktop\\py\\passwd.txt') as f:\n",
+    "with open(r'C:\\Users\\Ronn\\Desktop\\py\\passwd.txt') as f:\n",
     "    highest=0\n",
     "    for lines in f.readlines():\n",
     "        data = (lines.split(':'))\n",
@@ -29,20 +29,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12 users are using /bin/bash shell\n"
+      "1 user are using /bin/bash shell\n"
      ]
     }
    ],
    "source": [
     "# print all users with shell == \"/bin/bash\"\n",
-    "with open(r'C:\\Users\\RRamirez\\Desktop\\py\\passwd.txt') as f:\n",
+    "with open(r'C:\\Users\\Ronn\\Desktop\\py\\passwd.txt') as f:\n",
     "    bash=0\n",
     "    for lines in f.readlines():\n",
     "        data = (lines.split(':'))\n",
@@ -50,7 +50,7 @@
     "        shell = data[6].strip()\n",
     "        if shell == \"/bin/bash\":\n",
     "            bash = bash +1\n",
-    "print(f'{bash} users are using /bin/bash shell')\n",
+    "print(f'{bash} user are using /bin/bash shell')\n",
     "        "
    ]
   },
@@ -82,6 +82,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.isfile(r'C:\\Users\\Ronn\\Desktop\\py\\passwd')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -104,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
